se crea clase main y se prueba funcionamiento del programa

--- a/ProyectoMVC/nbproject/project.properties
+++ b/ProyectoMVC/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyectomvc.ProyectoMVC
+main.class=iniciar.Iniciar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
